switch postgresql to sqlite

--- a/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
+++ b/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
@@ -11,8 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <!--<PackageReference Include="IceCoffee.AspNetCore" Version="1.0.2.3" GeneratePathProperty="true" />-->
-	  <PackageReference Include="IceCoffee.AspNetCore" Version="1.0.3" GeneratePathProperty="true" />
+	  <PackageReference Include="IceCoffee.AspNetCore" Version="1.0.3.1" GeneratePathProperty="true" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
 	</ItemGroup>
 
@@ -20,12 +19,18 @@
 		<ProjectReference Include="..\IceCoffee.Template.Data\IceCoffee.Template.Data.csproj" />
 	</ItemGroup>
 
-	<!--<ItemGroup>
+	<ItemGroup>
 		<None Include="$(PkgIceCoffee_AspNetCore)\lib\$(TargetFramework)\IceCoffee.AspNetCore.xml" Visible="false" CopyToOutputDirectory="PreserveNewest" />
-	</ItemGroup>-->
+	</ItemGroup>
 	
 	<ItemGroup>
 	  <Folder Include="wwwroot\" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <None Update="Data\database.db">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
