--- a/src/IceCoffee.Template.WebApi/appsettings.json
+++ b/src/IceCoffee.Template.WebApi/appsettings.json
@@ -18,9 +18,9 @@
   },
   "DbConnectionInfos": {
     "DefaultDbConnectionInfo": {
-      "DatabaseType": "PostgreSQL",
+      "DatabaseType": "SQLite",
       "ConnectionName": "DefaultDbConnection",
-      "ConnectionString": "Host=7daystodie.top;Username=postgres;Password=postgres@2022;Database=postgres"
+      "ConnectionString": "Data Source=./Data/database.db"
     }
   },
   "AccessToken": "123456",
