--- a/src/IceCoffee.Template.WebApi/appsettings.json
+++ b/src/IceCoffee.Template.WebApi/appsettings.json
@@ -13,6 +13,15 @@
         "Args": {
           "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 365,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
       }
     ]
   },
