--- a/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
+++ b/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
@@ -31,6 +31,12 @@
 	  <None Update="Data\database.db">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="install.bat">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="uninstall.bat">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
