--- a/src/IceCoffee.Template.Data/IceCoffee.Template.Data.csproj
+++ b/src/IceCoffee.Template.Data/IceCoffee.Template.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -9,7 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="IceCoffee.DbCore" Version="1.0.5.2" />
+		<PackageReference Include="IceCoffee.DbCore" Version="1.0.5.9" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
 	</ItemGroup>
 
 </Project>
