--- a/src/IceCoffee.Template.WebApi/appsettings.json
+++ b/src/IceCoffee.Template.WebApi/appsettings.json
@@ -27,19 +27,19 @@
   },
   "DbConnectionInfos": {
     "DefaultDbConnectionInfo": {
-      "DatabaseType": "SQLite",
-      "ConnectionName": "DefaultDbConnection",
-      "ConnectionString": "Data Source=./Data/database.db"
+      "DatabaseType": "SQLServer",
+      "ConnectionString": "Data Source=.;Initial Catalog=IceCoffee.Template;User ID=temp;Password=temp;TrustServerCertificate=True"
     }
   },
   "AccessToken": "123456",
   "EnableSwagger": true,
-  "EnableCors": true,
+  "EnableCors": false,
   "AllowedOrigins": null,
   "EnableRequestLog": true,
   "JwtOptions": {
     "ValidIssuer": "https://github.com/1249993110",
     "ValidAudience": "IceCoffee.Template.WebApi",
     "SecretKey": "9jGFvRyWq2wci26714c28a1CI6XmgHo9"
-  }
+  },
+  "PathBase": "/"
 }
