--- a/src/IceCoffee.Template.WebApi/appsettings.Development.json
+++ b/src/IceCoffee.Template.WebApi/appsettings.Development.json
@@ -1,3 +1,18 @@
 {
-
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
