--- a/src/IceCoffee.Template.Data/IceCoffee.Template.Data.csproj
+++ b/src/IceCoffee.Template.Data/IceCoffee.Template.Data.csproj
@@ -9,12 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<!--<PackageReference Include="IceCoffee.DbCore" Version="1.0.6" />-->
+		<PackageReference Include="IceCoffee.DbCore" Version="1.0.6" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\..\IceCoffee.DbCore\IceCoffee.DbCore\IceCoffee.DbCore.csproj" />
 	</ItemGroup>
 
 </Project>
