--- a/src/IceCoffee.Template.WebApi/appsettings.Production.json
+++ b/src/IceCoffee.Template.WebApi/appsettings.Production.json
@@ -1,3 +1,34 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 365,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
+  "DbConnectionInfos": {
+    "DefaultDbConnectionInfo": {
+      "DatabaseType": "SQLServer",
+      "ConnectionString": "Data Source=;Initial Catalog=;User ID=;Password=;TrustServerCertificate=True"
+    }
+  },
   "Urls": "http://localhost:18080"
 }
