--- a/src/IceCoffee.Template.WebApi/appsettings.json
+++ b/src/IceCoffee.Template.WebApi/appsettings.json
@@ -13,25 +13,10 @@
         "Args": {
           "outputTemplate": "[{Timestamp:HH:mm:ss.fff} {Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "./logs/log-.txt",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 365,
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
-        }
       }
     ]
   },
-  "DbConnectionInfos": {
-    "DefaultDbConnectionInfo": {
-      "DatabaseType": "SQLServer",
-      "ConnectionString": "Data Source=.;Initial Catalog=IceCoffee.Template;User ID=temp;Password=temp;TrustServerCertificate=True"
-    }
-  },
-  "AccessToken": "123456",
+  "AccessToken": null,
   "EnableSwagger": true,
   "EnableCors": false,
   "AllowedOrigins": null,
