--- a/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
+++ b/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
+		<NoWarn>$(NoWarn);CS8618</NoWarn>
 		<!--禁止创建 web.config 文件-->
 		<IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
 	</PropertyGroup>
