--- a/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
+++ b/src/IceCoffee.Template.WebApi/IceCoffee.Template.WebApi.csproj
@@ -9,6 +9,8 @@
 		<NoWarn>$(NoWarn);CS8618</NoWarn>
 		<!--禁止创建 web.config 文件-->
 		<IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileContext>..\..</DockerfileContext>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -17,6 +19,7 @@
 	  <PackageReference Include="IceCoffee.Common" Version="1.0.2.10" />
 	  <PackageReference Include="Mapster" Version="7.3.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.1" />
+	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
 	</ItemGroup>
 
 	<ItemGroup>
