--- a/src/IceCoffee.Template.WebApi/Properties/launchSettings.json
+++ b/src/IceCoffee.Template.WebApi/Properties/launchSettings.json
@@ -1,14 +1,20 @@
-﻿{
+{
   "profiles": {
     "IceCoffee.Template.WebApi": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5199",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5199"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true
     }
   }
 }
